--- a/rails_app/Gemfile
+++ b/rails_app/Gemfile
@@ -35,6 +35,8 @@ gem 'pry-rails'
 
 gem 'redis-rails'
 
+gem 'slim-rails'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
